force-app/main/default/objects/TTS_Related_Patent__c/TTS_Related_Patent__c.object-meta.xml
<CustomObject>
    <description>[TTS] Creates a relationship between multiple patents</description>
    <label>Related Patent</label>
    <nameField>
        <displayFormat>PRID{0000}</displayFormat>
        <label>Patent Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Patents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>