force-app/main/default/objects/TTS_Related_Patent__c/fields/IP_Patent__c.field-meta.xml
<CustomField>
    <fullName>IP_Patent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patent</label>
    <referenceTo>TTS_Patent__c</referenceTo>
    <relationshipLabel>Related Patents</relationshipLabel>
    <relationshipName>Related_Patents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>